feat: list posts within implementation & tests